[gd_scene load_steps=3 format=3 uid="uid://ciqxaf82rae8"]

[ext_resource type="Script" path="res://entities/components/entityAI/basic_entity_ai.gd" id="1_l2onu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0g7fu"]

[node name="BasicEntityAI" type="Node2D"]
script = ExtResource("1_l2onu")
chase_time = 1.0
chase_cooldown = 3.0
view_dist = 120

[node name="View" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="View"]
shape = SubResource("CircleShape2D_0g7fu")

[node name="ChaseTimer" type="Timer" parent="."]
one_shot = true

[node name="ChaseCooldownTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="View" to="." method="_on_view_body_entered"]
[connection signal="body_exited" from="View" to="." method="_on_view_body_exited"]
[connection signal="timeout" from="ChaseTimer" to="." method="_on_chase_timer_timeout"]
[connection signal="timeout" from="ChaseCooldownTimer" to="." method="_on_chase_cooldown_timer_timeout"]
